<resources>
    <string name="app_name">Screens</string>
    <string name="sign_in">Sign in</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="highlight_preamble">To use Highlight, please sign in with one of the services below:</string>
    <string name="why_not_email_title">Why not email?</string>
    <string name="why_not_email_body">Highlight is based on real identity and mutual friends.
        Using these services allows us to show you how you\'re connected to the people around you.
        It also makes it super easy to create a Highlight profile.
    </string>
    <string name="feedback_label">Please <a href="http://highlight.com">let us know</a> if you have feedback
        on this or if you would like to log in with another identity service. Thanks!
    </string>
    <string name="permission_label">We won\'t post things without your permission.</string>
    <string name="title_activity_custom_list_view">CustomListView</string>
    <string name="title_activity_pull_to_refresh_activtiy">PullToRefreshActivtiy</string>
    <string name="title_activity_recycler_view">RecyclerViewActivity</string>
    <string name="title_activity_heterogenous_layout">HeterogenousLayoutActivity</string>
    <string name="title_activity_card_view">CardViewActivity</string>
    <string name="title_activity_custom_progress_bar">CustomProgressBarActivity</string>
</resources>
